--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                       <h3>Eros</h3>
                       <ul>
                           <li><a href="https://discord.gg/WZ2McNPA2S">Become a Member</a></li>
-                          <li><a href="Members/index.html">Members</a></li>
+                          <li><a href="Members/Members.html">Members</a></li>
                       </ul>
                   </div>
                   <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
