--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-   <link rel="stylesheet" href="style.css"  type="text/css">
+   <link href="style.css" rel="stylesheet" type="text/css">
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
       </nav>
    </div>
    <!--Start Of Main Body-->
-      <h1 class="team" style="color: #A9A9A9;">Team Eros</h1>
+      <h1 class="team" style="color: #e7dbfa; font-weight: bold;"> Team <span class="eros">Eros</span></h1>
    <p class="who"><strong>ㅤㅤ > Who are we?</strong></p>
    <p>ㅤㅤ //  Eros is a team and family of MineCrafters<br>ㅤㅤwho play together and do the impossibles<br>ㅤㅤthat no one has ever seen done before.
    </p>
@@ -43,7 +43,7 @@
                       <h3>Eros</h3>
                       <ul>
                           <li><a href="https://discord.gg/WZ2McNPA2S">Become a Member</a></li>
-                          <li><a href="Members/Members.html">Members</a></li>
+                          <li><a href="Members/index.html">Members</a></li>
                       </ul>
                   </div>
                   <div class="col-lg-3 item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
