--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <div class="col-sm-4 col-md-3 item">
                       <h3>Contact</h3>
                       <ul>
-                          <li><a href="#">Discord : etacre#3280 ; A S P Σ C T O R#2928</a></li>
+                          <li><a href="#">Discord : etacre#3280</a></li>
                           <li><a href="">Developed by <strong>etacre</strong></a></li>
                           <li><a href="https://discord.gg/4MxPTX2aAY">BedCraft Discord</a></li>
                       </ul>
