--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    <!--Start Of Main Body-->
       <h1 class="team" style="color: #e7dbfa; font-weight: bold;"> Team <span class="eros">Eros</span></h1>
    <p class="who"><strong>ㅤㅤ > Who are we?</strong></p>
-   <p>ㅤㅤ //  Eros is a team and family of MineCrafters<br>ㅤㅤㅤㅤㅤㅤwho play together and do the impossibles<br>ㅤㅤㅤㅤㅤㅤthat no one has ever seen done before.
+   <p>ㅤㅤ //  Eros is a team and family of MineCrafters<br>ㅤㅤㅤwho play together and do the impossibles<br>ㅤㅤㅤthat no one has ever seen done before.
    </p>
    <!--Footer-->
   
